--- a/github-search-user/package.json
+++ b/github-search-user/package.json
@@ -6,17 +6,58 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint:eslint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint:eslint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "lint:prettier": "prettier --check .",
+    "lint:prettier:fix": "prettier --write .",
+    "lint": "npm run lint:eslint && npm run lint:prettier",
+    "lint:fix": "npm run lint:eslint:fix && npm run lint:prettier:fix",
+    "tsc": "tsc -b",
+    "test": "jest"
   },
   "dependencies": {
     "expo": "~54.0.20",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-native": "0.81.5",
+    "react-test-renderer": "19.1.0"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^20.0.0",
+    "@testing-library/react-native": "^13.3.3",
+    "@types/jest": "29.5.14",
     "@types/react": "~19.1.0",
+    "eslint": "^9.39.0",
+    "eslint-config-expo": "~10.0.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "husky": "^9.1.7",
+    "jest": "~29.7.0",
+    "jest-expo": "~54.0.13",
+    "lint-staged": "^16.2.6",
+    "prettier": "^3.6.2",
     "typescript": "~5.9.2"
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,json}": [
+      "eslint --fix --quiet",
+      "prettier --write --log-level error"
+    ],
+    "*.test.{js,jsx,ts,tsx}": [
+      "jest --silent",
+      "eslint --fix --quiet",
+      "prettier --write --log-level error"
+    ]
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "clearMocks": true
   },
   "private": true
 }
